Update dependencies and code for Java 11